Introduce contrast issue for webhint to catch

--- a/cla_public/static-src/stylesheets/main.scss
+++ b/cla_public/static-src/stylesheets/main.scss
@@ -17,7 +17,7 @@ $govuk-typography-use-rem: false;
  */
 @import "govuk_publishing_components/components/cookie-banner";
 
-$laa-unknown-colour: #cc9e9e;
+$laa-unknown-colour: #f5f5f5;
 $laa-staging-colour: govuk-colour("turquoise");
 $laa-dev-colour: govuk-colour("pink");
 
